Create landing page and stylesheet

--- a/landing_page.html
+++ b/landing_page.html
@@ -1,21 +1,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chat App</title>
 
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet"> 
+    <title>ChatAway</title>
+
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-firestore.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./scripts/firebaseConfig.js"></script>
     <script src="./scripts/chat-lib.js"></script>
-
 </head>
-<body style = "background-color = ">
-    <h1>Chat Away!</h1>
-
+<body>
+    <div class = "header">
+        <h1>Chat Away!</h1>
+    </div>
     <!-- Put your code in the chat.js file -->
     <script src="./scripts/chat.js"></script>
 </body>
