Try to create more complex function to enter chatroom(not yet working)

--- a/landing_page.html
+++ b/landing_page.html
@@ -12,19 +12,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./scripts/firebaseConfig.js"></script>
     <script src="./scripts/chat-lib.js"></script>
+    <script src="./scripts/chat.js"></script>
+
 </head>
 <body>
     <div class = "header">
         <h1>Chat Away!</h1>
     </div>
 
-
-    <form class = "usernameField" onsubmit="return false;">
+    <div id= "welcome">
+        <form class = "usernameField" onsubmit="return false;">
         <p class = "usernameField">Insert your username: </p>
         <input id = "username" type="text" name="username" required><br /><br />
-        <input type="submit" value="Enter" onclick='ChatApp.createOrUpdateUser(document.getElementById("username").value, -1, function(userData) { console.log(userData)} );' target="index.html">
-    </form>
-
+        <a href="./index.html"><input type="submit" value="Enter" onclick='submitUsername();'></a>
+        </form>
+    </div>
     <script src="./scripts/chat.js"></script>
 </body>
 </html>
