--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Chat App</title>
 
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="styles/main.css" rel="stylesheet" type="text/css" >
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Permanent+Marker" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
@@ -14,8 +14,10 @@
     <script src="./scripts/chat.js"></script>
 
 </head>
-<body style = "background-color = ">
-    <h1>Chat Away!</h1>
+<body>
+    <div class = "header">
+        <h1>Tribe Chat</h1>
+    </div>
 
     <!-- Put your code in the chat.js file -->
     <script src="./scripts/chat.js"></script>
