Add chat background, place divs on index file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chat App</title>
+    <title>Le Chat Room</title>
 
     <link href="styles/main.css" rel="stylesheet" type="text/css" >
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Permanent+Marker" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|IBM+Plex+Serif|Sue+Ellen+Francisco" rel="stylesheet">
+
 
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-firestore.js"></script>
@@ -16,7 +17,25 @@
 </head>
 <body>
     <div class = "header">
-        <h1>Tribe Chat</h1>
+        <h1>Le Chat.</h1>
+    </div>
+
+    <div class = "messageSpace">
+        <div class = "messageContainer">
+            <h2>Messages</h2>
+        <hr />
+        </div>
+
+        <div class = "messageSendbox">
+            <form>
+
+            </form>
+        </div>
+    </div>
+
+    <div class = "activeUsers">
+        <h2>Active Users</h2>
+        <hr />
     </div>
 
     <!-- Put your code in the chat.js file -->
