--- a/landing_page.html
+++ b/landing_page.html
@@ -2,10 +2,11 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Tribe Chat</title>
+    <title>Le Chat</title>
 
     <link href="styles/main.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Love+Ya+Like+A+Sister|Permanent+Marker|Special+Elite|Sue+Ellen+Francisco" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|IBM+Plex+Serif|Sue+Ellen+Francisco" rel="stylesheet">
+
 
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-firestore.js"></script>
@@ -17,7 +18,7 @@
 </head>
 <body>
     <div class = "header">
-        <h1>Tribe Chat</h1>
+        <h1>Le Chat.</h1>
     </div>
 
     <div id= "welcome" >
