--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <h1>Le Chat.</h1>
     </div>
 
+    <div id= "welcome" >
+        <form class = "usernameField" onsubmit="return false;">
+        <p class = "usernameField">Insert your username: </p>
+        <input class = "usernameField" id = "username" type="text" name="username" required><br /><br />
+        <input class = "usernameField" type="submit" value="Enter" onclick='ChatApp.createOrUpdateUser(document.getElementById("username").value, -1, function(userData) { console.log(userData)} );'>
+        </form>
+    </div>
+
     <div class = "messageSpace">
         <div class = "messageContainer">
             <h2>Messages</h2>
@@ -27,7 +35,10 @@
         </div>
 
         <div class = "messageSendbox">
-            <form>
+            <form id = "messageSend" onsubmit="return false;">
+
+                <input id = "messageBox" id = "message" type="text" name="message" required><br />
+                <input id = "messageSendButton" type="submit" value="Submit" onclick='ChatApp.newMessage(document.getElementById("username").value, document.getElementById("messageBox").value) {console.log(userData)}'>
 
             </form>
         </div>
