Add array with users active in last 5 min

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <form class = "usernameField" onclick = "return false">
         <h2 class = "usernameField">Insert your username: </h2>
         <input class = "usernameField" id = "username" type="text" name="username" required>
-        <input class = "usernameField" type="submit" value="Enter" onclick="submitUsername();">
+        <input class = "usernameField" type="submit" value="Enter" onclick="submitUsername()">
         </form>
     </div>
 
@@ -49,9 +49,12 @@
         </div>
     </div>
 
-    <div class = "activeUsers">
+    <div class = "activeUsersSpace">
         <h2>Active Users</h2>
         <hr />
+        <p id="activeUsers">
+
+        </p>
     </div>
 
     <!-- Put your code in the chat.js file -->
